fix: override MUI ListSubheader background in dark mode

--- a/plugins/ros/src/components/riScInfo/RiScSelectionCard.module.css
+++ b/plugins/ros/src/components/riScInfo/RiScSelectionCard.module.css
@@ -3,6 +3,7 @@
   font-size: 0.7rem;
   text-transform: uppercase;
   letter-spacing: 0.08em;
+  background-color: inherit !important;
 }
 
 .lockedSectionHeaderWithDivider {
